# lingokatutubo

./: .gitignore  README.md
FSL_Recognition_System/: .gitignore  README.md  manage.py  requirements.txt
FSL_Recognition_System/ml_model/: README.md  predictor.py
FSL_Recognition_System/recognition/: admin.py  forms.py  models.py  urls.py  views.py
FSL_Recognition_System/sign_language_project/: asgi.py  settings.py  urls.py  wsgi.py
FSL_Recognition_System/templates/: base.html
frontend/: README.md
lingokatutubo/: .gitignore  ARCHITECTURE_DIAGRAM.md  DATASET_MODEL_PREP.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  LAYOUT_PRESERVATION_QA.md  RUNNING_GUIDE.md  SKILL.md  agent.md  claude.md  manage.py  package-lock.json  requirements-training.txt  run_dataset_audit.py
lingokatutubo/backend/: OCR_LANGUAGE_PACKS.md  _django_compat.py  add_phrase_samples.py  detection_service.py  export_training_jsonl.py  extraction_service.py  file_service.py  language_detection_service.py  main.py  models.py  pipeline_service.py  pyproject.toml  reconstruction_service.py  requirements.txt  test_layout_backend.py  test_ocr_backend.py  test_translation_dataset.py  translation_data.json  translation_dataset.py
lingokatutubo/backend/model_prep/: dataset_quality_report.json  translation_pairs_dev.jsonl  translation_pairs_test.jsonl
lingokatutubo/backend/ocr_stage/: __init__.py  ocr_service.py
lingokatutubo/frontend/: package.json
lingokatutubo/lingokatutubo_django/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
lingokatutubo/model_training/: README.md  train_byt5.py  (+4 more)
(+95 files in other folders)
