[project]
name = "bagobo-translator-backend"
version = "0.1.0"
description = "FastAPI backend for Bagobo-Tagabawa document translator"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0,<6.0",
    "psycopg2-binary>=2.9.9",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "fastapi[standard]>=0.128.1",
    "pymupdf>=1.24.8",
    "python-docx>=0.8.11",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
]
